# pptx-svg-ai-demo

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/skills/pptx/: SKILL.md
backend/skills/pptx/references/: editing.md
backend/skills/pptx/scripts/: artifact_client.py  edit_pptx.py  generate_pptx.py  pptx_inspect.js
backend/src/: __init__.py  config.py  constants.py  main.py
backend/src/agents/: __init__.py  pptx_agent.py  root_agent.py
backend/src/agents/tools/: file_bridge.py
backend/src/api/: artifacts.py  chat.py  health.py  prompts.py
backend/src/services/: __init__.py  artifact_store.py  pptx_edit_bridge.js  pptx_edit_bridge.py  pptx_skill.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: config.ts  vite-env.d.ts
frontend/src/components/: ChatLayout.css  ChatLayout.tsx  ChatMessageList.tsx  ChatView.css  ChatView.tsx  CollapsibleToolHistory.tsx  FilePreviewArea.tsx  MarkdownRenderer.css  MarkdownRenderer.tsx  PptxEditToolbar.css  PptxEditToolbar.tsx  PptxPanel.css  PptxPanel.tsx  PptxSlideViewer.css  PptxSlideViewer.tsx  SavedPromptsPopup.css  SavedPromptsPopup.tsx  Sidebar.css  Sidebar.tsx  SlidesPanel.css  TemplateConfirmModal.tsx  TemplateEditorModal.css  TemplateEditorModal.tsx  TemplateExecuteModal.css  TemplateExecuteModal.tsx  TemplateGeneratingOverlay.tsx
frontend/src/hooks/: useChat.ts  useFileAttachment.ts  usePptxDrag.ts  usePptxRenderer.ts  useTemplateGeneration.ts  useTheme.ts
(+5 files in other folders)
